# compress_png

./: .gitignore  CMakeLists.txt  README.md  resource.rc.in  resources.qrc
3rd/: CMakeLists.txt
3rd/libimagequant/: CMakeLists.txt
3rd/libimagequant/macos/: libimagequant.0.4.1.dylib
3rd/oxipng/macos/: oxipng
assets/ico/: Filosofem.icns
cmake/: global.cmake  installer-generator.cmake  setup.cmake
config/: install-config.xml.in  install-package.xml.in
include/: Mainwindow.h  SingleApplication.h  Taskdialog.h
src/: CMakeLists.txt  Mainwindow.cpp  Taskdialog.cpp  main.cpp
ui/: Taskdialog.ui  mainwindow.ui
